02/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> intervals
Rule 2     intervals -> intervals interval
Rule 3     intervals -> interval
Rule 4     interval -> [ NUM ; NUM ]

Terminals, with rules where they appear

;                    : 4
NUM                  : 4 4
[                    : 4
]                    : 4
error                : 

Nonterminals, with rules where they appear

interval             : 2 3
intervals            : 1 2
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . intervals
    (2) intervals -> . intervals interval
    (3) intervals -> . interval
    (4) interval -> . [ NUM ; NUM ]

    [               shift and go to state 4

    start                          shift and go to state 1
    intervals                      shift and go to state 2
    interval                       shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> intervals .
    (2) intervals -> intervals . interval
    (4) interval -> . [ NUM ; NUM ]

    $end            reduce using rule 1 (start -> intervals .)
    [               shift and go to state 4

    interval                       shift and go to state 5

state 3

    (3) intervals -> interval .

    [               reduce using rule 3 (intervals -> interval .)
    $end            reduce using rule 3 (intervals -> interval .)


state 4

    (4) interval -> [ . NUM ; NUM ]

    NUM             shift and go to state 6


state 5

    (2) intervals -> intervals interval .

    [               reduce using rule 2 (intervals -> intervals interval .)
    $end            reduce using rule 2 (intervals -> intervals interval .)


state 6

    (4) interval -> [ NUM . ; NUM ]

    ;               shift and go to state 7


state 7

    (4) interval -> [ NUM ; . NUM ]

    NUM             shift and go to state 8


state 8

    (4) interval -> [ NUM ; NUM . ]

    ]               shift and go to state 9


state 9

    (4) interval -> [ NUM ; NUM ] .

    [               reduce using rule 4 (interval -> [ NUM ; NUM ] .)
    $end            reduce using rule 4 (interval -> [ NUM ; NUM ] .)

